# jome

./: .gitignore  CMakeLists.txt  LICENSE  README.adoc
assets/: .gitignore  CMakeLists.txt  cats.json  emojis-png-locations-16.json  emojis-png-locations-24.json  emojis-png-locations-32.json  emojis-png-locations-40.json  emojis-png-locations-48.json  emojis.json
gen-data/: CMakeLists.txt  README.adoc  cats.yml  create.py  emoji-list-16.0.txt  emoji-modifier-bases.txt  emoji.json  emojis-0.6.txt  emojis-0.7.txt  emojis-1.0.txt  emojis-11.0.txt  emojis-12.0.txt  emojis-12.1.txt  emojis-13.0.txt  emojis-13.1.txt  emojis-14.0.txt  emojis-15.0.txt  emojis-15.1.txt  emojis-16.0.txt  emojis-17.0.txt  emojis-2.0.txt  emojis-3.0.txt  emojis-4.0.txt  emojis-5.0.txt  emojis.txt  with-skin-tone-support.txt
gen-data/cats/: activities-no-sports.txt  animal-faces.txt  animals-no-faces.txt  arrows.txt  asian-food.txt  astrology.txt  audio.txt  awards.txt  body-parts-no-hands.txt  books-paper.txt  cat-faces.txt  celebration.txt  city-places.txt  clothing-accessories.txt  danger.txt  drinking.txt  flags.txt  fruits.txt  geometric-symbols.txt  hands.txt  health.txt  love.txt  main-smileys.txt  misc-objects.txt  misc-symbols.txt  money.txt  music.txt  nature-places.txt  other-smileys.txt  person-activities.txt  person-faces.txt  person-gestures.txt  person-roles.txt  person-together.txt  plants.txt  prepared-food.txt  religion.txt  space.txt  sports.txt  sweets.txt  (+8 more)
jome/: CMakeLists.txt  cat-list-widget-item.cpp  cat-list-widget-item.hpp  emoji-db.cpp  emoji-db.hpp  emoji-images.cpp  emoji-images.hpp  emojipedia.cpp  emojipedia.hpp  jome-window.cpp  jome-window.hpp  jome.cpp  q-cat-list-widget-item.cpp  q-cat-list-widget-item.hpp  q-emoji-graphics-item.cpp  q-emoji-graphics-item.hpp  q-emoji-grid-widget.cpp  q-emoji-grid-widget.hpp  q-emoji-widget.cpp  q-emoji-widget.hpp  q-emojis-widget.cpp  q-emojis-widget.hpp  q-jome-server.cpp  q-jome-server.hpp  q-jome-window.cpp  q-jome-window.hpp  settings.cpp  settings.hpp  simple-json.hpp  tinyutf8.cpp  tinyutf8.hpp  utils.hpp
jome-ctl/: CMakeLists.txt  jome-ctl.cpp  q-ctl-client.cpp  q-ctl-client.hpp
man/: CMakeLists.txt  about.adoc  jome-ctl.1  jome-ctl.1.adoc  jome.1  jome.1.adoc
