# Copyright (C) 2019 Philippe Proulx <eepp.ca>
#
# This software may be modified and distributed under the terms
# of the MIT license. See the LICENSE file for details.

install (
    FILES
        "sel-16.png"
        "sel-24.png"
        "sel-32.png"
        "sel-40.png"
        "sel-48.png"
        "icon.png"
    DESTINATION
        share/jome/data
)
